// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sxlc3or {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sxlc3or:focus,
.sxlc3or:hover {
  color: var(--sx-colors-tertiary);
  text-decoration: underline;
}

.sxlc3or:active {
  color: var(--sx-colors-primary);
}

.sxj1d4e > .sxlc3or,
.sxh1zwe > .sxlc3or,
.sx03kze > .sxlc3or {
  font-size: 100%;
  line-height: 1;
}

.sxj1d4e > .sxlc3or::before,
.sxj1d4e > .sxlc3or::after,
.sxh1zwe > .sxlc3or::before,
.sxh1zwe > .sxlc3or::after,
.sx03kze > .sxlc3or::before,
.sx03kze > .sxlc3or::after {
  content: none;
}

.sxlc3or8bitc--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxlc3or8bitc--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxlc3or8bitc--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

<div>
  <a
    class="sxlc3or sxlc3or8bitc--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sxlc3or {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sxlc3or:focus,
.sxlc3or:hover {
  color: var(--sx-colors-tertiary);
  text-decoration: underline;
}

.sxlc3or:active {
  color: var(--sx-colors-primary);
}

.sxj1d4e > .sxlc3or,
.sxh1zwe > .sxlc3or,
.sx03kze > .sxlc3or {
  font-size: 100%;
  line-height: 1;
}

.sxj1d4e > .sxlc3or::before,
.sxj1d4e > .sxlc3or::after,
.sxh1zwe > .sxlc3or::before,
.sxh1zwe > .sxlc3or::after,
.sx03kze > .sxlc3or::before,
.sx03kze > .sxlc3or::after {
  content: none;
}

.sxlc3or8bitc--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxlc3or8bitc--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxlc3or8bitc--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sxlc3orpfvfy--size-lg {
  font-size: var(--sx-fontSizes-lg);
  line-height: 1.52;
}

.sxlc3orpfvfy--size-lg::before {
  content: '';
  margin-bottom: -0.3983em;
  display: table;
}

.sxlc3orpfvfy--size-lg::after {
  content: '';
  margin-top: -0.3983em;
  display: table;
}

<div>
  <a
    class="sxlc3or sxlc3orpfvfy--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
